# llvm-project

./: .gitignore
clang/include/clang/Basic/: Attr.td
clang/include/clang/Driver/: MPKUntrustedArgs.h  Options.td  ToolChain.h
clang/lib/CodeGen/: CodeGenModule.cpp
clang/lib/Driver/: MPKUntrustedArgs.cpp  ToolChain.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Sema/: SemaDeclAttr.cpp
compiler-rt/cmake/: config-ix.cmake
compiler-rt/lib/: CMakeLists.txt
compiler-rt/lib/mpk_untrusted/: CMakeLists.txt  alloc_site_handler.cpp  alloc_site_handler.h  dyn_interrupt.cc  dyn_interrupt.h  mpk.cpp  mpk.h  mpk_common.h  mpk_fault_handler.cc  mpk_fault_handler.cpp  mpk_fault_handler.h  mpk_formatter.cpp  mpk_formatter.h  mpk_untrusted.cpp  mpk_untrusted.h
compiler-rt/lib/mpk_untrusted/tests/: CMakeLists.txt
compiler-rt/lib/mpk_untrusted/tests/mpk-key/src/: mpk_key.c  mpk_key_alloc.c
compiler-rt/lib/mpk_untrusted/tests/sig/: CMakeLists.txt  mpk_untrusted_unit_test_main.cpp  sig.cpp
compiler-rt/lib/mpk_untrusted/tests/sig/src/: sig.c
compiler-rt/lib/mpk_untrusted/tests/unit/: alloc_site_handler_tests.cpp
compiler-rt/lib/mpk_untrusted/tests/util/: mpk_untrusted_test_config.h
llvm/: CMakeLists.txt
llvm/include/llvm/: InitializePasses.h  LinkAllPasses.h
llvm/include/llvm/Bitcode/: LLVMBitCodes.h
llvm/include/llvm/IR/: Attributes.td
llvm/include/llvm/Transforms/: IPO.h  Instrumentation.h
llvm/include/llvm/Transforms/IPO/: DynUntrustedAlloc.h  DynUntrustedAllocPost.h  DynUntrustedAllocPre.h  UntrustedAlloc.h
llvm/lib/AsmParser/: LLLexer.cpp  LLParser.cpp  LLToken.h
llvm/lib/Bitcode/Reader/: BitcodeReader.cpp
llvm/lib/Bitcode/Writer/: BitcodeWriter.cpp
llvm/lib/IR/: Attributes.cpp  Verifier.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/IPO/: CMakeLists.txt  DynUntrustedAlloc.cpp  DynUntrustedAllocPost.cpp  DynUntrustedAllocPre.cpp  IPO.cpp  PassManagerBuilder.cpp  UntrustedAlloc.cpp
llvm/lib/Transforms/Instrumentation/: CMakeLists.txt  Instrumentation.cpp  MpkCallGates.cpp
llvm/lib/Transforms/Utils/: CodeExtractor.cpp
llvm/tools/: CMakeLists.txt
llvm/tools/opt/: CMakeLists.txt
